# obs-subtitle

./: Cargo.toml
src/: ass.rs  lib.rs
subs/: test1.ass
