[package]
name = "obs-subtitle"
version = "0.1.0"
authors = ["Harry Cheng <chengyuhui1@gmail.com>"]
edition = "2018"

[dependencies]
obs-wrapper = { path = "../rust-obs-plugins" }
xorshift = "0.1"
libass = { path="../libass-rs/libass" }
packed_simd_2 = "*"
anyhow = "1.0"
log = "0.4"
subparse = "0.6.2"

[lib]
name = "subtitle"
crate-type = ["cdylib"]